infra/k8s/ingress/ingress-serv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  labels:
    name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
  - host: tickets.dev
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /api/users/?(.*)
        backend:
          service:
            name: auth-srv.auths.svc.cluster.local
            port:
              number: 3000
      - pathType: ImplementationSpecific
        path: /api/tickets/?(.*)
        backend:
          service:
            name: tickets-srv.tickets-app.svc.cluster.local
            port:
              number: 4000
